@@ -1,5 +1,7 @@
 2005-07-09  Jakub Jelinek  <jakub@redhat.com>
 
+	* gfortran.dg/badline.f: New test.
+
 	* gfortran.fortran-torture/execute/entry_9.f90: New test.
 
 	* gfortran.dg/altreturn_1.f90: New test.
